ADDED [added firebase authentication, logic for saving data to firebase db, rendering saved items in a ul element]

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <input type="text" class="input-el" id="input-el" placeholder="Enter product name">
         <button class="gotocart-btn" id="gotocart-btn" type="submit">go to cart</button>
       </form>
+      <ul class="ul-el" id="ul-el">
+      </ul>
     </div>
   </div>
 </body>
 <script src="index.js" type="module"></script>
-<script src="functions.js" type="module"></script>
 </html>
