ADDED [logic for fetch item in db, remove item in db, added css stylings for hover, user-select and ul and li]

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" class="input-el" id="input-el" placeholder="Enter product name">
         <button class="gotocart-btn" id="gotocart-btn" type="submit">go to cart</button>
       </form>
-      <ul class="ul-el" id="ul-el">
+      <ul class="shoppingListEl" id="shoppingListEl">
       </ul>
     </div>
   </div>
