UPDATED [css styling]

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-content">
       <img src="gotocart-img.png" class="cart-img" alt="cats animated image">
       <form id="form-el">
-        <input type="text" class="input-el" id="input-el" placeholder="Enter product name">
+        <input type="text" class="input-el" id="input-el" placeholder="Item">
         <button class="gotocart-btn" id="gotocart-btn" type="submit">go to cart</button>
       </form>
       <ul class="shoppingListEl" id="shoppingListEl">
